--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.env
+.next/
+node_modules/
+dist/
+coverage/
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/.idea/
+/.vscode/
+/.history/# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
